--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <title>Crown Valley</title>
   </h1>
   <h2 id="name">Crown Valley</h2>
-  <a href="https://www.instagram.com/crownvalley.theband/">Instagram</a>
+  <a href="https://www.instagram.com/_crown_valley_/">Instagram</a>
   <img id="logo" src="./cvLogo.png" />
   <body>
     <h3 id="about">About</h3>
+    <p id="aboutText">
+      Born out of Los Angeles, 
+      Crown Valley is a gritty fusion of rock and funk, 
+      drawing inspiration from the raw energy of 
+      classic rock legends and the infectious grooves of funk pioneers. 
+      Since they began, they've brought raw energy and infectious grooves 
+      to the stage. Harnessing the ability to switch from intense, riff-fueled
+      jams to slower, melancholic melodies, they have captured the attention
+      of their fans.
+      With many electrifying performances under their belt, 
+      they've become known for their blistering solos 
+      and irresistible hooks. 
+      Crown Valley is here to ignite stages and hearts 
+      with their bare-bones, rock-funk sound.
+    </p>
     <h3 id="about">Members</h3>
     <h5> Jack</h5>
     <p>Vocals</p>
@@ -21,4 +36,5 @@
     <h5> Ethan</h5>
     <p>Bass</p>
     <h3 id="songs">Songs</h3>
+    <p>EP <i>Crown Valley</i> COMING SOON</p>
 </html>
