--- a/index.html
+++ b/index.html
@@ -37,4 +37,6 @@
     <p>Bass</p>
     <h3 id="songs">Songs</h3>
     <p>EP <i>Crown Valley</i> COMING SOON</p>
+    <h3>Shows</h3>
+    <p>Stay tuned for new shows coming soon!</p>
 </html>
