--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       Crown Valley is here to ignite stages and hearts 
       with their bare-bones, rock-funk sound.
     </p>
-    <h3 id="about">Members</h3>
+    <h3 id="songs">Music</h3>
+    <p>EP <i>Crown Valley</i> COMING SOON</p>
+    <h3>Shows</h3>
+    <p>Stay tuned for more shows coming soon!</p>
+    <h3>Members</h3>
     <h5> Jack</h5>
     <p>Vocals</p>
     <h5> Katie</h5>
@@ -35,8 +39,4 @@
     <p>Guitar</p>
     <h5> Ethan</h5>
     <p>Bass</p>
-    <h3 id="songs">Songs</h3>
-    <p>EP <i>Crown Valley</i> COMING SOON</p>
-    <h3>Shows</h3>
-    <p>Stay tuned for new shows coming soon!</p>
 </html>
