--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Crown Valley</title>
   </h1>
   <h2 id="name">Crown Valley</h2>
-  <a href="https://www.instagram.com/_crown_valley_/">Instagram</a>
+  <a id="social" href="https://www.instagram.com/_crown_valley_/">Instagram</a>
   <img id="logo" src="./cvLogo.png" />
   <body>
     <h3 id="about">About</h3>
@@ -39,4 +39,6 @@
     <p>Guitar</p>
     <h5> Ethan</h5>
     <p>Bass</p>
+    <br />
+    <a href="#top">to top</a>
 </html>
