--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </h1>
   <h2 id="name">Crown Valley</h2>
   <a id="social" href="https://www.instagram.com/_crown_valley_/">Instagram</a>
+  <span> | </span>
+  <a id="social" href="https://www.tiktok.com/@_crown_valley_?_t=8lqOXp5K3V1&_r=1">TikTok</a>
   <img id="logo" src="./cvLogo.png" />
   <body>
     <h3 id="about">About</h3>
