--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
     <h3>Shows</h3>
     <p>Stay tuned for more shows coming soon!</p>
     <h3>Members</h3>
-    <h5> Jack</h5>
-    <p>Vocals</p>
     <h5> Katie</h5>
     <p>Vocals / Keys</p>
+    <h5> Jack</h5>
+    <p>Vocals / Bass</p>
     <h5> Marc</h5>
     <p>Drums</p>
     <h5> Jayden</h5>
     <p>Guitar</p>
-    <h5> Ethan</h5>
-    <p>Bass</p>
     <br />
     <a href="#top">to top</a>
 </html>
